--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -2,3 +2,23 @@
   flex-direction: column;
   width: 100%;
 }
+.map_container {
+  .search {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .ipt {
+      flex: 5;
+      height: 80px;
+      border-radius: 24px;
+      background-color: #ddd;
+      padding: 0 20px;
+      box-sizing: border-box;
+    }
+    .btn {
+      flex: 1;
+      text-align: center;
+      padding: 20px;
+    }
+  }
+}
