--- a/src/pages/gaode/index.less
+++ b/src/pages/gaode/index.less
@@ -2,6 +2,11 @@
   flex-direction: column;
   width: 100%;
 }
+#container{
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+}
 .map_container {
   .search {
     display: flex;
