feat:自定义导航栏+todo

--- a/src/app.less
+++ b/src/app.less
@@ -2,6 +2,10 @@ View,
 Text,
 body
  {
-  font-size: 32px;
+  font-size: 24px;
   color: #333333;
+  box-sizing: border-box;
+}
+taro-view-core,taro-text-core,taro-scroll-view-core{
+  box-sizing: border-box;
 }
