--- a/src/pages/todo/index.module.less
+++ b/src/pages/todo/index.module.less
@@ -1,21 +1,5 @@
-.navbar{
-  display: flex;
-  align-items: center;
-  .navbar_back{
-    width: 174px;
-    height: 100%;
-    border-radius: 32px;
-    background-color: rgba(255,255,255,.8);
-    border: 2px solid #ccc;
-  }
-  .navbar_mid{
-    height: 100%;
-    flex: 1;
-  }
-}
 
 .todo{
-  height: 100vh;
+  height: calc(100vh - 168px);
   padding: 20px;
-  // padding: 40px;
 }
