--- a/src/components/poster/index.less
+++ b/src/components/poster/index.less
@@ -1,17 +1,9 @@
-.mask-wrapper {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
+.poster-wrapper {
   display: flex;
   flex-direction: column;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   align-items: center;
-  justify-self: center;
   justify-content: center;
   width: 100%;
-  z-index: 999;
   .close {
     margin-top: 32px;
     width: 80px;
