--- a/client/src/pages/gaode/components/search/index.module.less
+++ b/client/src/pages/gaode/components/search/index.module.less
@@ -1,15 +1,19 @@
 
-
+.search_wrap{
+  padding: 20px;
+  background-color: #fff;
+  flex: 1;
+}
 .search {
   display: flex;
   align-items: center;
-  height: 80px;
+  height: 60px;
   border-radius: 40px;
   padding: 0 24px;
   background-color: #ddd;
   .search_icon {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
   .input{
     flex: 1;
