--- a/client/src/pages/gaode/index.module.less
+++ b/client/src/pages/gaode/index.module.less
@@ -1,5 +1,14 @@
 
 .container {
+  .header{
+    display: flex;
+    align-items: center;
+    .city{
+      padding: 10px;
+      border-radius: 26px;
+      background-color: #ddd;
+    }
+  }
   .map{
     width: 100vw;
     height: 40vh;
