--- a/client/src/pages/user-center/index.module.scss
+++ b/client/src/pages/user-center/index.module.scss
@@ -1,37 +1,56 @@
-
-.user_center {
+.wrapper {
   height: 100vh;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
-
-  .avatar_wrapper {
-    display: inline-block;
-    padding: 0;
-    background-color: unset;
-    width: 120px;
-    height: 120px;
-    &::after {
-      display: none;
+  color: #fff;
+  font-family: helvetica-ultra-light;
+  .container {
+    .location {
+      width: 50%;
+      margin: 0 auto;
+      padding-top: 20px;
+      text-align: center;
+      @include text-ellipsis-1;
+      text{
+        margin-right: 20px;
+      }
     }
-    .avatar {
-      width: 120px;
-      height: 120px;
-      border-radius: 60px;
-    }
-  }
-
-  .nickname {
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    .ipt {
-      flex: 1;
-      padding-left: 20px;
-      height: 60px;
+    .now {
+      padding: 20px;
+      .current {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .temp {
+          font-weight: lighter;
+          font-size: 240px;
+          display: flex;
+          align-items: flex-start;
+          line-height: 1;
+          margin-bottom: 40px;
+          .du {
+            margin-top: 20px;
+            font-size: 100px;
+          }
+        }
+        .text {
+          margin-bottom: 40px;
+          text {
+            margin-left: 20px;
+          }
+        }
+        .humidity {
+          @include flex;
+          .line {
+            width: 2px;
+            height: 30px;
+            margin: 0 10px;
+            background-color: rgba(255, 255, 255, 0.5);
+          }
+        }
+      }
+      .future {
+        @include flex;
+      }
     }
   }
 }
