--- a/client/src/pages/user-center/index.module.scss
+++ b/client/src/pages/user-center/index.module.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   color: #fff;
   font-family: helvetica-ultra-light;
+  background-image: url("../../assets/common/weather/cloud.jpg");
   .container {
     .location {
       width: 50%;
@@ -9,12 +10,28 @@
       padding-top: 20px;
       text-align: center;
       @include text-ellipsis-1;
-      text{
+      text {
         margin-right: 20px;
       }
     }
     .now {
-      padding: 20px;
+      padding: 40px;
+      position: relative;
+      .air {
+        @include flex;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        padding: 10px 20px;
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        .level {
+          width: 8px;
+          height: 28px;
+          border-radius: 4px;
+          margin-right: 20px;
+        }
+      }
       .current {
         display: flex;
         flex-direction: column;
@@ -39,17 +56,50 @@
           }
         }
         .humidity {
+          width: 100%;
           @include flex;
+          margin-bottom: 20px;
+          text {
+            flex: 1;
+            &:first-child {
+              text-align: right;
+            }
+          }
           .line {
             width: 2px;
             height: 30px;
-            margin: 0 10px;
+            margin: 0 20px;
             background-color: rgba(255, 255, 255, 0.5);
           }
         }
       }
       .future {
         @include flex;
+        height: 100px;
+        margin-top: 20px;
+        .line {
+          width: 2px;
+          height: 100%;
+          margin: 0 20px;
+
+          background-color: rgba(255, 255, 255, 0.5);
+        }
+        .tomorrow,
+        .after_tomorrow {
+          height: 100%;
+          flex: 1;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          .left,
+          .right {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+          }
+        }
       }
     }
   }
