feat:添加tab左右切换

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -7,7 +7,7 @@ taro-scroll-view-core {
 page {
   height: 100vh;
   font-size: 28px;
-  background:$primary-color;
+  // background:$primary-color;
   color: $text-color;
   .container {
     height: 100%;
